# fmt_extension

./: .gitignore  CMakeLists.txt  LICENSE  README.md  appveyor.yml  cmake_ninja_build.bat  cmake_vc15_build.bat  fmt_ext.h  fmt_ext_test.cpp  fmt_structs.h  premake5.lua  premake5_vc15_build.bat  preprocessor.h
include/: fmt_ext.h  fmt_rgb.h  fmt_structs.h  preprocessor.h
